# yombar

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: crypto.rs  error.rs  fs.rs  io.rs  key.rs  lib.rs  main.rs  master_key.rs  util.rs  vault.rs  wrapped_key.rs
src/crypto/: siv_ctrmac.rs  siv_gcm.rs  v1.rs
src/fs/: encrypted_file.rs  fuse.rs  translator.rs  webdav.rs
src/fs/fuse/: dir_tree.rs
src/vault/: config.rs  key.rs
tests/: basic_properties.rs  basic_tests.rs  siv_ctrmac_basic.rs  siv_gcm_basic.rs
tests/fixtures/vault_v8_siv_ctrmac/: masterkey.cryptomator  masterkey.cryptomator.38AE943E.bkup  masterkey.cryptomator.860F6503.bkup  vault.cryptomator  vault.cryptomator.04D8EB0E.bkup
tests/fixtures/vault_v8_siv_ctrmac/d/55/YKAU6VJ4B7QTWNPM4GHQ66HJXT4OJA/: dirid.c9r
tests/fixtures/vault_v8_siv_ctrmac/d/7T/X2VJCKD5CWG6UKR4UUHF5VIYWV7BGL/: dirid.c9r  kWQ67rcnZ-30y4C6oXIOuAjzGu0x_gc45QXQhNdjcA==.c9r
tests/fixtures/vault_v8_siv_ctrmac/d/7T/X2VJCKD5CWG6UKR4UUHF5VIYWV7BGL/2NduFtBw23cX0l9lpBp0QUWU0p8=.c9s/: name.c9s  symlink.c9r
tests/fixtures/vault_v8_siv_ctrmac/d/7T/X2VJCKD5CWG6UKR4UUHF5VIYWV7BGL/Aaxc0KfAqvi--bacWQqYQI9666s=.c9s/: dir.c9r  name.c9s
tests/fixtures/vault_v8_siv_ctrmac/d/7T/X2VJCKD5CWG6UKR4UUHF5VIYWV7BGL/Z6YfzwN1O1JERN7C-TpPYumGks4=.c9s/: contents.c9r  name.c9s
tests/fixtures/vault_v8_siv_ctrmac/d/B3/EO5WWODTDD254SS2TQWVAQKJAWPBKK/: TKDIJ1vsa0Tp5ZCcUudycUuYTcz17tdgI489pGU=.c9r  dirid.c9r  elqiMLEIVhXP94ydJeId4vavM_9rPv380wdMYzwg.c9r
tests/fixtures/vault_v8_siv_ctrmac/d/B3/EO5WWODTDD254SS2TQWVAQKJAWPBKK/tne_IIoGP9L5vHPlj1I71SPX2HvJFQudTg==.c9r/: symlink.c9r
tests/fixtures/vault_v8_siv_ctrmac/d/B3/EO5WWODTDD254SS2TQWVAQKJAWPBKK/v_CfBHr_pkOa5T7OQB-QYLzKm9TMrU-N.c9r/: dir.c9r
tests/fixtures/vault_v8_siv_ctrmac/d/GI/YO5RUXD5NP6IP7GFAWSNT5IIEP6J7A/: IOiZwngROqT1h7atIffotwJTN42_OtnvLdLgJTQ=.c9r  dirid.c9r  lTrI2Jfu-YkLpHmfu_OZPge73NerWUK5wjFewa8E.c9r
tests/fixtures/vault_v8_siv_ctrmac/d/GI/YO5RUXD5NP6IP7GFAWSNT5IIEP6J7A/U8OwsYlzyqpdT0mC-N61KMLQMzUkb2nl.c9r/: dir.c9r
tests/fixtures/vault_v8_siv_ctrmac/d/GI/YO5RUXD5NP6IP7GFAWSNT5IIEP6J7A/dxPMgy69CHwsgJBwPUiDu9A60SoxONanow==.c9r/: symlink.c9r
tests/fixtures/vault_v8_siv_ctrmac/d/QQ/I7Q3TUGAZFNCXWWEXUSOJS7PQ4K4HE/: 3ZnmWpMsMPllwZCto1Gb0R7JvkiWcuV1Kmk6aczQPQ==.c9r  dirid.c9r
tests/fixtures/vault_v8_siv_ctrmac/d/QQ/I7Q3TUGAZFNCXWWEXUSOJS7PQ4K4HE/E_8fT73uku3qwW5D3t8CkfE_4M8=.c9s/: name.c9s
tests/fixtures/vault_v8_siv_ctrmac/d/QQ/I7Q3TUGAZFNCXWWEXUSOJS7PQ4K4HE/FYXhffH4kNPAWmJB6esvVsjX94w=.c9s/: dir.c9r  name.c9s
tests/fixtures/vault_v8_siv_ctrmac/d/QQ/I7Q3TUGAZFNCXWWEXUSOJS7PQ4K4HE/RT_l9fEi2ixrWMKuPnA_iaqxPKE=.c9s/: name.c9s  symlink.c9r
tests/fixtures/vault_v8_siv_ctrmac/d/QQ/I7Q3TUGAZFNCXWWEXUSOJS7PQ4K4HE/a0b_BlValyqiHST5aj2YkIqczyo=.c9s/: name.c9s
tests/fixtures/vault_v8_siv_ctrmac/d/QQ/I7Q3TUGAZFNCXWWEXUSOJS7PQ4K4HE/kR7qduQKc3duqmSGzHpXYTZQI80=.c9s/: name.c9s  symlink.c9r
tests/fixtures/vault_v8_siv_ctrmac/d/QQ/I7Q3TUGAZFNCXWWEXUSOJS7PQ4K4HE/ztyKfeiKoqmDNyt7fUcHwIjJOI8=.c9s/: contents.c9r  name.c9s
tests/fixtures/vault_v8_siv_ctrmac/d/T4/B2UD2BM6A42GLTW47AYLJXTAQLHSU4/: dirid.c9r
tests/fixtures/vault_v8_siv_gcm/: masterkey.cryptomator  masterkey.cryptomator.49366DD9.bkup  masterkey.cryptomator.DF64E936.bkup  vault.cryptomator  vault.cryptomator.A197A193.bkup
tests/fixtures/vault_v8_siv_gcm/d/4O/XVJ6TTE3ZDMSW4MFMJJBQTIJCDR3BY/: dirid.c9r
tests/fixtures/vault_v8_siv_gcm/d/QD/W5WPJ7TSDTMH2G4363MJUELZ7KZMHK/: Nl7o6qgpvLuA9XfYd_VxL0JwzfAO_tuJLghsGuY=.c9r  WQ6sflYGPWPHJubj3F4ZMYwhKraEQUCV42gL11XA.c9r  dirid.c9r
tests/fixtures/vault_v8_siv_gcm/d/QD/W5WPJ7TSDTMH2G4363MJUELZ7KZMHK/0qOpKBlsQpYoaCBKjktDT9nB_cgnkLgmzQ==.c9r/: symlink.c9r
tests/fixtures/vault_v8_siv_gcm/d/QD/W5WPJ7TSDTMH2G4363MJUELZ7KZMHK/YBCYPtCTbcJ5oenDViBnPT9f-Px1Jpkf.c9r/: dir.c9r
tests/fixtures/vault_v8_siv_gcm/d/RC/WG5EI3VR4DOIGAFUPFXLALP5SBGCL5/: AlBBrYyQQqFiMXocarsNhcWd2oQ0yyRu86LZdZw=.c9r  LNyfONa3J2M1pirw-S-YBasDwUyV7RyhSwz7oMlP.c9r  dirid.c9r
tests/fixtures/vault_v8_siv_gcm/d/RC/WG5EI3VR4DOIGAFUPFXLALP5SBGCL5/XR9kc-7Ue3YBQHdnBPjXqICTokLkYOUZew==.c9r/: symlink.c9r
tests/fixtures/vault_v8_siv_gcm/d/RC/WG5EI3VR4DOIGAFUPFXLALP5SBGCL5/dmFqnPnkmS0TGuiVp1wgcWbyeiwfvnli.c9r/: dir.c9r
tests/fixtures/vault_v8_siv_gcm/d/RT/C3KT7DD5C3X6QE32X4IL6PM6WHHNB5/: dirid.c9r  j2O1bILonFELjBCQTaqZEBgfUh1_uHvXjOdMdc2ZEg==.c9r
tests/fixtures/vault_v8_siv_gcm/d/RT/C3KT7DD5C3X6QE32X4IL6PM6WHHNB5/WKTqrlqJR2bzK9gPEHfNYjklYxA=.c9s/: contents.c9r  name.c9s
tests/fixtures/vault_v8_siv_gcm/d/RT/C3KT7DD5C3X6QE32X4IL6PM6WHHNB5/biriOq0g_HryVlCHfK3sQwEOcdM=.c9s/: dir.c9r  name.c9s
tests/fixtures/vault_v8_siv_gcm/d/RT/C3KT7DD5C3X6QE32X4IL6PM6WHHNB5/xxnLPC-aOBj_nn5vdWzSIhuWris=.c9s/: name.c9s  symlink.c9r
tests/fixtures/vault_v8_siv_gcm/d/UI/6ZF2IIZX3LXLARPP2U64V65SL3B4VM/: dirid.c9r
tests/fixtures/vault_v8_siv_gcm/d/UW/RBQWYYXJZZTYB4UCJAMR5D6Z55K2ZF/: EbRMA8Bi4uhKIxjTyXs5e53PHMMckHX0_HCJiiYTgg==.c9r  dirid.c9r
tests/fixtures/vault_v8_siv_gcm/d/UW/RBQWYYXJZZTYB4UCJAMR5D6Z55K2ZF/PyVdHmEvxdfbJqFL7t4upb3PZSg=.c9s/: dir.c9r  name.c9s
tests/fixtures/vault_v8_siv_gcm/d/UW/RBQWYYXJZZTYB4UCJAMR5D6Z55K2ZF/z-kDEOovmkBgb8wx8P3aVcxUXdc=.c9s/: name.c9s  symlink.c9r
tests/fixtures/vault_v8_siv_gcm/d/UW/RBQWYYXJZZTYB4UCJAMR5D6Z55K2ZF/zVmY6EFALiakIky3HpY6ZORqbQE=.c9s/: contents.c9r  name.c9s
tests/fixtures/vault_v8_siv_gcm/d/XM/PPTCRW2EF565IK4B7JPQGTNDXAU7KX/: Z3G0EjTJ_CVo_FJiPsi2FYIWsjuPGCXjz4m48roKTg==.c9r  dirid.c9r
