[package]
name = "yombar"
version = "0.1.0"
authors = ["Luc Street (@0xSiO)"]
description = "A simpler, faster, and more lightweight implementation of Cryptomator using Rust."
repository = "https://github.com/0xSiO/yombar"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
aes = { version = "0.8", features = ["zeroize"] }
aes-gcm = { version = "0.10", features = ["zeroize"] }
aes-kw = { version = "0.2", features = ["std"] }
aes-siv = { version = "0.7", features = ["std"] }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
base32ct = { version = "0.2", features = ["std"] }
base64ct = { version = "1", features = ["std"] }
bytes = { version = "1" }
clap = { version = "4", features = ["derive"] }
color-eyre = { version = "0.6" }
ctr = { version = "0.9", features = ["std", "zeroize"] }
dav-server = { version = "0.7", default-features = false }
fd-lock = "4"
futures-util = { version = "0.3" }
hmac = { version = "0.12", features = ["std"] }
jsonwebtoken = { version = "9", default-features = false }
libc = "0.2"
rand_core = { version = "0.6", features = ["std"] }
rpassword = "7"
scrypt = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1" }
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = { version = "1", features = ["std", "zeroize_derive"] }

[target.'cfg(unix)'.dependencies]
fuser = { version = "0.15", features = ["abi-7-31"] }

# TODO: Maybe implement a WinFSP backend
# [target.'cfg(target_os = "windows")'.dependencies]
# winfsp = { version = "0.11", default-features = false, features = ["stable"] }
