[package]
name = "yombar"
version = "0.1.0"
authors = ["Luc Street (@0xSiO)"]
description = "A simpler, faster, and more lightweight implementation of Cryptomator using Rust."
repository = "https://github.com/0xSiO/yombar"
license = "AGPL-3.0"
edition = "2024"

[features]
# webdav = ["axum", "dav-server", "futures-util", "tokio"]

[dependencies]
aes = { version = "0.9", features = ["zeroize"] }
aes-kw = "0.3"
aes-siv = { version = "0.7", features = ["std"] }
aws-lc-rs = { version = "1" }
base32ct = { version = "0.3", features = ["alloc"] }
base64ct = { version = "1", features = ["alloc"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
ctr = { version = "0.10", features = ["zeroize"] }
dashmap = "6"
enum_dispatch = "0.3"
fd-lock = "4"
hmac = "0.13"
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
libc = "0.2"
num_cpus = "1"
rand = "0.10"
rpassword = "7"
scrypt = { version = "0.12.0-rc.10", features = ["password-hash", "phc", "rand_core"] }
secrets = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1-checked = "0.10"
sha2 = "0.11"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["serde", "v4"] }

# Feature: webdav
# axum = { version = "0.8", default-features = false, features = ["http1", "tokio"], optional = true }
# dav-server = { version = "0.7", default-features = false, optional = true }
# futures-util = { version = "0.3", optional = true }
# tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }

[target.'cfg(unix)'.dependencies]
fuser = { version = "0.17", features = ["abi-7-40"] }

# TODO: Maybe implement a WinFSP backend
# [target.'cfg(target_os = "windows")'.dependencies]
# winfsp = { version = "0.11", default-features = false, features = ["stable"] }
